{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 56,
  "lineage": "c9cd5713-db77-03bf-c7f4-d201906f7b1c",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "rbac_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rbac-a",
            "metadata": [
              {
                "generation": 0,
                "name": "rbac-a",
                "resource_version": "1893",
                "uid": "f9f72e48-2fc7-42ab-963f-3617417a0949"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "rbac-a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_eks_cluster.vishal",
            "module.eks.aws_eks_node_group.vishal-nodegroup",
            "module.eks.aws_iam_openid_connect_provider.vishal_oidc",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.node_group",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.nodes",
            "module.eks.data.aws_iam_policy_document.eks_assume_role",
            "module.eks.data.aws_iam_policy_document.node_assume_role",
            "module.eks.data.aws_vpc.selected",
            "module.iam_for_sa.aws_iam_policy.s3_policy",
            "module.iam_for_sa.aws_iam_role.sa_role",
            "module.iam_for_sa.aws_iam_role_policy_attachment.s3_attach",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "null_resource.before_k8s_apply"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "rbac_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rbac-b",
            "metadata": [
              {
                "generation": 0,
                "name": "rbac-b",
                "resource_version": "1891",
                "uid": "683b73e9-331a-4c6c-9105-5e57ccd27458"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "rbac-b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_eks_cluster.vishal",
            "module.eks.aws_eks_node_group.vishal-nodegroup",
            "module.eks.aws_iam_openid_connect_provider.vishal_oidc",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.node_group",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.nodes",
            "module.eks.data.aws_iam_policy_document.eks_assume_role",
            "module.eks.data.aws_iam_policy_document.node_assume_role",
            "module.eks.data.aws_vpc.selected",
            "module.iam_for_sa.aws_iam_policy.s3_policy",
            "module.iam_for_sa.aws_iam_role.sa_role",
            "module.iam_for_sa.aws_iam_role_policy_attachment.s3_attach",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "null_resource.before_k8s_apply"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:vpc/vpc-0837150965641ea9f",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-096ff35914212a3bf",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0fdf52e5106061496",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0837150965641ea9f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fdcd0c658c798b2c",
            "owner_id": "715418180138",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:security-group/sg-0af48e86a49cc8093",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af48e86a49cc8093",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow cluster communication from within VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vishal-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "715418180138",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "sg-0af48e86a49cc8093",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.eks.data.aws_vpc.selected",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:security-group/sg-0f3be978be22188da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3be978be22188da",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to talk to control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af48e86a49cc8093"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vishal-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "715418180138",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "sg-0f3be978be22188da",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.data.aws_vpc.selected",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c134d854051f2fb",
            "arn": "arn:aws:ec2:ap-south-1:715418180138:elastic-ip/eipalloc-03c134d854051f2fb",
            "association_id": "eipassoc-0c78d496296e0276a",
            "domain": "vpc",
            "id": "eipalloc-03c134d854051f2fb",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b2a0b2f072ee0067",
            "private_dns": "ip-10-0-3-176.ap-south-1.compute.internal",
            "private_ip": "10.0.3.176",
            "public_dns": "ec2-3-6-85-229.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.85.229",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-nat-eip-1"
            },
            "tags_all": {
              "Name": "tech-vishal-nat-eip-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fce71f030029560",
            "arn": "arn:aws:ec2:ap-south-1:715418180138:elastic-ip/eipalloc-09fce71f030029560",
            "association_id": "eipassoc-092955a67b5ff435d",
            "domain": "vpc",
            "id": "eipalloc-09fce71f030029560",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-018c184ae769f1c11",
            "private_dns": "ip-10-0-6-85.ap-south-1.compute.internal",
            "private_ip": "10.0.6.85",
            "public_dns": "ec2-65-2-91-47.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.91.47",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-nat-eip-2"
            },
            "tags_all": {
              "Name": "tech-vishal-nat-eip-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:internet-gateway/igw-06c08569d816ad846",
            "id": "igw-06c08569d816ad846",
            "owner_id": "715418180138",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-igw"
            },
            "tags_all": {
              "Name": "tech-vishal-igw"
            },
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c134d854051f2fb",
            "association_id": "eipassoc-0c78d496296e0276a",
            "connectivity_type": "public",
            "id": "nat-00a93dbee9bb102c5",
            "network_interface_id": "eni-0b2a0b2f072ee0067",
            "private_ip": "10.0.3.176",
            "public_ip": "3.6.85.229",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e3de42b4df49c31",
            "tags": {
              "Name": "tech-vishal-nat-gw"
            },
            "tags_all": {
              "Name": "tech-vishal-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fce71f030029560",
            "association_id": "eipassoc-092955a67b5ff435d",
            "connectivity_type": "public",
            "id": "nat-0722aaf37abcc610d",
            "network_interface_id": "eni-018c184ae769f1c11",
            "private_ip": "10.0.6.85",
            "public_ip": "65.2.91.47",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05503a88e4185792b",
            "tags": {
              "Name": "tech-vishal-nat-gw"
            },
            "tags_all": {
              "Name": "tech-vishal-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:route-table/rtb-04475f7d68dbff0ba",
            "id": "rtb-04475f7d68dbff0ba",
            "owner_id": "715418180138",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00a93dbee9bb102c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech-vishal-Database-rt-1"
            },
            "tags_all": {
              "Name": "tech-vishal-Database-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "rtb-04475f7d68dbff0ba",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:route-table/rtb-0ce241b6beeec50ee",
            "id": "rtb-0ce241b6beeec50ee",
            "owner_id": "715418180138",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0722aaf37abcc610d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech-vishal-Database-rt-2"
            },
            "tags_all": {
              "Name": "tech-vishal-Database-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "rtb-0ce241b6beeec50ee",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:route-table/rtb-0cba6fbc39ae9650f",
            "id": "rtb-0cba6fbc39ae9650f",
            "owner_id": "715418180138",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00a93dbee9bb102c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech-vishal-cache-rt-1"
            },
            "tags_all": {
              "Name": "tech-vishal-cache-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "rtb-0cba6fbc39ae9650f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:route-table/rtb-0d6453b721570c3d7",
            "id": "rtb-0d6453b721570c3d7",
            "owner_id": "715418180138",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0722aaf37abcc610d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech-vishal-cache-rt-2"
            },
            "tags_all": {
              "Name": "tech-vishal-cache-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "rtb-0d6453b721570c3d7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:route-table/rtb-0744d240675b3f8fb",
            "id": "rtb-0744d240675b3f8fb",
            "owner_id": "715418180138",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00a93dbee9bb102c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech-vishal-private-rt-1"
            },
            "tags_all": {
              "Name": "tech-vishal-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "rtb-0744d240675b3f8fb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:route-table/rtb-0338f820ffa53ced3",
            "id": "rtb-0338f820ffa53ced3",
            "owner_id": "715418180138",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0722aaf37abcc610d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech-vishal-private-rt-2"
            },
            "tags_all": {
              "Name": "tech-vishal-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "rtb-0338f820ffa53ced3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:route-table/rtb-00a1b707152d57271",
            "id": "rtb-00a1b707152d57271",
            "owner_id": "715418180138",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c08569d816ad846",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech-vishal-public-rt"
            },
            "tags_all": {
              "Name": "tech-vishal-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "rtb-00a1b707152d57271",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc8413da033b21ae",
            "region": "ap-south-1",
            "route_table_id": "rtb-0744d240675b3f8fb",
            "subnet_id": "subnet-08e233090443592f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.cache",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0498b4defc8f613fc",
            "region": "ap-south-1",
            "route_table_id": "rtb-0744d240675b3f8fb",
            "subnet_id": "subnet-0795f83213b8c6db8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08edce32a13627a77",
            "region": "ap-south-1",
            "route_table_id": "rtb-0744d240675b3f8fb",
            "subnet_id": "subnet-0fb8f7b967ad7ec68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bd391f05459a6b2",
            "region": "ap-south-1",
            "route_table_id": "rtb-0338f820ffa53ced3",
            "subnet_id": "subnet-0ccbe2ab10fe52705"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074d73405bdb9ba2d",
            "region": "ap-south-1",
            "route_table_id": "rtb-00a1b707152d57271",
            "subnet_id": "subnet-07e3de42b4df49c31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078d688ac6e29b137",
            "region": "ap-south-1",
            "route_table_id": "rtb-00a1b707152d57271",
            "subnet_id": "subnet-05503a88e4185792b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:subnet/subnet-08e233090443592f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e233090443592f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715418180138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-cache-subnet-1"
            },
            "tags_all": {
              "Name": "tech-vishal-cache-subnet-1"
            },
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "subnet-08e233090443592f5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:subnet/subnet-0795f83213b8c6db8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0795f83213b8c6db8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715418180138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-db-subnet-1"
            },
            "tags_all": {
              "Name": "tech-vishal-db-subnet-1"
            },
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "subnet-0795f83213b8c6db8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:subnet/subnet-0fb8f7b967ad7ec68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb8f7b967ad7ec68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715418180138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-private-subnet-1"
            },
            "tags_all": {
              "Name": "tech-vishal-private-subnet-1"
            },
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "subnet-0fb8f7b967ad7ec68",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:subnet/subnet-0ccbe2ab10fe52705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccbe2ab10fe52705",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715418180138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-private-subnet-2"
            },
            "tags_all": {
              "Name": "tech-vishal-private-subnet-2"
            },
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "subnet-0ccbe2ab10fe52705",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:subnet/subnet-07e3de42b4df49c31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e3de42b4df49c31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715418180138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-public-subnet-1"
            },
            "tags_all": {
              "Name": "tech-vishal-public-subnet-1"
            },
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "subnet-07e3de42b4df49c31",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:subnet/subnet-05503a88e4185792b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05503a88e4185792b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715418180138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-public-subnet-2"
            },
            "tags_all": {
              "Name": "tech-vishal-public-subnet-2"
            },
            "vpc_id": "vpc-0837150965641ea9f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "subnet-05503a88e4185792b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:715418180138:vpc/vpc-0837150965641ea9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0594514e08ee6cb64",
            "default_route_table_id": "rtb-0fdcd0c658c798b2c",
            "default_security_group_id": "sg-06bfe0ed52dc512af",
            "dhcp_options_id": "dopt-0fdf52e5106061496",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0837150965641ea9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fdcd0c658c798b2c",
            "owner_id": "715418180138",
            "region": "ap-south-1",
            "tags": {
              "Name": "tech-vishal-vpc"
            },
            "tags_all": {
              "Name": "tech-vishal-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715418180138",
            "id": "vpc-0837150965641ea9f",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}